--- a/three.html
+++ b/three.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>My first Three.js app</title>
+		<title>Silly Cubes</title>
 		<style>canvas { width: 100%; height: 100% }</style>
 	</head>
 	<body>
