--- a/particleplayground.html
+++ b/particleplayground.html
@@ -79,11 +79,12 @@
                 colorStartSpread: new THREE.Vector3(10, 10, 10),
         		colorEnd: new THREE.Color('purple'),
         		sizeStart: 5,
-        		sizeEnd: .25,
+                sizeStartSpread: 2.5,
+        		sizeEnd: .5,
 
-                opacityStart: .1,
+                opacityStart: .2,
                 opacityMiddle: .9,
-                opacityEnd: .2,
+                opacityEnd: .4,
 
         		particleCount: 10000,
                 angleAlignVelocity: 1
@@ -100,12 +101,12 @@
         		colorStart: new THREE.Color('purple'),
                 colorStartSpread: new THREE.Vector3(5, 5, 5),
         		colorEnd: new THREE.Color('green'),
-        		sizeStart: 1,
-        		sizeEnd: .5,
+        		sizeStart: 1.5,
+        		sizeEnd: .75,
 
                 opacityStart: .8,
                 opacityMiddle: .5,
-                opacityEnd: .2,
+                opacityEnd: .3,
 
         		particleCount: 40000,
                 particlesPerSecond: 800,
@@ -128,12 +129,12 @@
                     colorStartSpread: new THREE.Vector3(5, 5, 5),
                     colorEnd: new THREE.Color('purple'),
                     colorEndSpread: new THREE.Vector3(10, 10, 10),
-                    sizeStart: .75,
-                    sizeEnd: 1.5,
+                    sizeStart: .5,
+                    sizeEnd: 1,
 
                     opacityStart: .9,
-                    opacityMiddle: .75,
-                    opacityEnd: .6,
+                    opacityMiddle: .6,
+                    opacityEnd: .3,
 
                     particleCount: 3000,
                     particlesPerSecond: 100,
